# ReflectionTemplateLibrary-CPP

./: CMakeLists.txt  README.md
CxxReflectionTemplates/inc/: ClassReflection.h  MethodReflection.hpp  RFunction.h  RFunction.hpp  ReflClassBuilder.hpp  ReflInheritanceBuilder.hpp  ReflectionBuilder.h  TypeConstants.h  VarReflection.h  VarReflection.hpp
CxxReflectionTests/: CMakeLists.txt
CxxReflectionTests/inc/: ConstructorTests.h  InheritanceTests.h  TestConstants.h  TestFact.hpp
CxxReflectionTests/src/: CMakeLists.txt  ClassMethodsTests.cpp  ConstMethodOverloadTests.cpp  ConstructorTests.cpp  CopyConstructorTests.cpp  MethodCallTests.cpp  NameSpaceGlobalsTest.cpp  NameSpaceGlobalsTests.cpp  RTLUnitTests.cpp  ReflectedCallStatusErrTests.cpp  StaticMethodTests.cpp  TestFact.cpp
CxxTestProject/: CMakeLists.txt
CxxTestProject/inc/: Book.h  Complex.h  Date.h  NSFunction.h  Person.h
CxxTestProject/src/: Book.cpp  CMakeLists.txt  Complex.cpp  Date.cpp  NSFunction.cpp  Person.cpp
CxxTypeRegistration/: CMakeLists.txt
CxxTypeRegistration/inc/: MyReflection.h  Reflection.h  TestUtils.h  TestUtilsBook.h  TestUtilsDate.h  TestUtilsGlobals.h  TestUtilsPerson.h
CxxTypeRegistration/src/: CMakeLists.txt  MyReflection.cpp  Reflection.cpp  TestUtils.cpp  TestUtilsBook.cpp  TestUtilsDate.cpp  TestUtilsPerson.cpp
ProxyDesignPattern/: CMakeLists.txt
ProxyDesignPattern/inc/: OrgReflection.h  Original.h  Proxy.h
ProxyDesignPattern/src/: CMakeLists.txt  OrgReflection.cpp  Original.cpp  Proxy.cpp  main.cpp
ReflectionTemplateLib/: CMakeLists.txt  ReflectionTemplateLib.sln
ReflectionTemplateLib/CxxReflectionTemplates/: CMakeLists.txt
ReflectionTemplateLib/CxxReflectionTemplates/inc/: ClassReflection.hpp  ConstructorReflection.h  CppMirror.h  CppTypeReflection.h  ReflClass.hpp  ReflClassBuilder.h  ReflExecuter.h  ReflMethod.h  ReflObject.h  ReflVariable.hpp  ReflectionBuilder.hpp  ReflectionTemplateBuilder.h
ReflectionTemplateLib/CxxReflectionTemplates/src/: CMakeLists.txt  ReflMethod.cpp
ReflectionTemplateLib/CxxReflectionTests/inc/: MethodCallTests.h  Reflection.h  TestFact.h
ReflectionTemplateLib/CxxReflectionTests/src/: MethodCallTests.cpp  Reflection.cpp
ReflectionTemplateLib/Debug/: RTLUnitTests.ilk  ReflectionTemplateLib.lib
ReflectionTemplateLib/RTLUnitTests/: RTLUnitTests.cpp  RTLUnitTests.vcxproj  RTLUnitTests.vcxproj.filters  cpp.hint
ReflectionTemplateLib/RTLUnitTests/Debug/: vc142.idb
ReflectionTemplateLib/RTLUnitTests/Debug/RTLUnitTests.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
ReflectionTemplateLib/RTLUnitTests/src/: Book.cpp  Book.h  ConstructorTests.cpp  InheritanceTests.cpp  MethodCallTests.cpp  Reflection.cpp
ReflectionTemplateLib/ReflectionTemplateLib/: ReflectionTemplateLib.vcxproj  ReflectionTemplateLib.vcxproj.filters
ReflectionTemplateLib/ReflectionTemplateLib/Debug/: ReflectionTemplateLib.idb  ReflectionTemplateLib.vcxproj.FileListAbsolute.txt
ReflectionTemplateLib/ReflectionTemplateLib/Debug/Reflecti.0494adfa.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  ReflectionTemplateLib.lastbuildstate
ReflectionTemplateLib/ReflectionTemplateLib/RTLsrc/: ConstructorReflection.hpp  CppMirrorBuilder.h  MethodReflection.h  MethodReflection.hpp  ReflClass.cpp  ReflClass.h  ReflClass.hpp  ReflClassBuilder.h  ReflClassBuilder.hpp  ReflExecuter.hpp  ReflInheritanceBuilder.h  ReflMethod.hpp  ReflObject.hpp  ReflVariable.h
ReflectionTemplateLib/access/inc/: CxxMirror.h  CxxMirrorToJson.h  Function.h  Function.hpp  FunctorContainer.h  FunctorContainer.hpp  FunctorId.h  Instance.h  Method.h  Method.hpp  NameSpace.h  RObject.h  RObject.hpp  RStatus.h  Rany.h  Record.h  Record.hpp  SmartAny.h  UniqueAny.h
ReflectionTemplateLib/access/src/: CMakeLists.txt  CxxMirror.cpp  CxxMirrorToJson.cpp  Function.cpp  Instance.cpp  Method.cpp  NameSpace.cpp  RObject.cpp  RStatus.cpp  Rany.cpp  Record.cpp  SmartAny.cpp  UniqueAny.cpp
ReflectionTemplateLib/builder/: CMakeLists.txt
ReflectionTemplateLib/builder/inc/: Builder.h  Builder.hpp  ConstructorBuilder.h  ConstructorBuilder.hpp  CxxMirrorBuilder.h  FunctionBuilder.h  FunctionBuilder.hpp  MethodBuilder.h  MethodBuilder.hpp  RecordBuilder.h  RecordBuilder.hpp  Reflect.h  Reflect.hpp  ReflectionBuilder.hpp
ReflectionTemplateLib/builder/src/: CMakeLists.txt  CxxMirrorBuilder.cpp  FunctionBuilder.cpp  Reflect.cpp
ReflectionTemplateLib/common/: Constants.h  Constants.hpp  RTLibInterface.h  ReflectionTemplateLib.h
ReflectionTemplateLib/detail/inc/: CallReflector.h  ConstructorContainer.h  CxxReflection.h  FunctorContainer.h  FunctorContainer.hpp  FunctorId.h  MethodContainer.h  ReflectTypeMeta.h  ReflectionBuilder.h  ReflectionBuilder.hpp  SetupConstructor.h  SetupConstructor.hpp  SetupFunction.h  SetupFunction.hpp  SetupMethod.h  SetupMethod.hpp  TypeId.h  TypeId.hpp
ReflectionTemplateLib/detail/src/: CMakeLists.txt  CxxReflection.cpp  FunctorId.cpp  ReflectTypeMeta.cpp  TypeId.cpp  TypeIdInitializer.cpp
ReflectionTemplateLib/inc/: Constants.h  ConstructorBuilder.h  ConstructorBuilder.hpp  CxxMirror.h  CxxMirror.hpp  CxxMirrorBuilder.h  Function.h  Function.hpp  FunctionBuilder.h  FunctionBuilder.hpp  FunctorContainer.h  FunctorContainer.hpp  Method.h  Method.hpp  NameSpace.h  RObject.h  RObject.hpp  Record.h  Record.hpp  ReflectionTemplateLib.h  ReflectionTemplates.h  SignatureTypeList.h  TypeDescriptorList.h  TypeList.h
ReflectionTemplateLib/src/: CMakeLists.txt  CxxMirror.cpp  CxxMirrorBuilder.cpp  Function.cpp  FunctionBuilder.cpp  FunctorContainer.cpp  Method.cpp  NameSpace.cpp  RObject.cpp  Record.cpp
clang-reflect/: CMakeLists.txt
(+4 files in other folders)
